--- a/final/css/style.css
+++ b/final/css/style.css
@@ -279,14 +279,16 @@ html,body{
 
 
 .footer{
-	width: 100%;
-	height: 50px;
-	font-family: 'Alegreya', serif;
-	font-size: 16px;
-	text-align: center;
-	background-color: #594a47;
-	color: #ffffff;
-	display: flex;
+ width: 100%;
+ height: 50px;
+ font-family: 'Alegreya', serif;
+ font-size: 16px;
+ text-align: center;
+ background-color: #594a47;
+ color: #ffffff;
+ display: flex;
     align-items: center;
     justify-content: center;
+ letter-spacing: 7px;
+
 }
