--- a/final/css/style1.css
+++ b/final/css/style1.css
@@ -188,9 +188,8 @@ input[type=submit]:hover {
 	background-color: #594a47;
 	color: #ffffff;
 	display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 200px;
+    	align-items: center;
+    	justify-content: center;
+    	margin-top: 200px;
+	letter-spacing: 7px;
 }
-
-
