--- a/final/css/style1.css
+++ b/final/css/style1.css
@@ -120,6 +120,7 @@ html,body{
 	font-size: 37.9px;
 	font-weight: bolder;
 	margin-bottom: 50px;
+	letter-spacing: 10px;
 }
 
 .txt{
@@ -127,6 +128,7 @@ html,body{
 	font-size: 23.7px;
 	font-weight: bolder;
 	margin-bottom: 10px;
+	letter-spacing: 10px;
 }
 
 .form {
@@ -140,6 +142,7 @@ html,body{
 	display: flex;
   	justify-content: space-around;
   	margin-top: 30px;
+	letter-spacing: 10px;
 
 }
 
