--- a/final/css/style.css
+++ b/final/css/style.css
@@ -153,61 +153,80 @@ html,body{
 
 .map img{
 	width: 100%;
-	position: absolute;	
+
 }
 
 .bean{
-	height: 605px;
 	display: block;
 	width: 100%;
+	margin-bottom: 50px;
+	display: inline-flex;
+	justify-content: center;
 }
 
+.bean-title{
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#f69f61;
+	font-size: 20px;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+
 .bean img{
-	width: 50px;
+	width: 30px;
 }
 
 .zm-bean{
-	position: absolute;
-	top: 750px;
-	left: 180px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 25px;
+	text-align: center;
 	cursor: pointer;
+	margin-right: 30px;
 }
 
 .nm-bean{
-	position: absolute;
-	top: 900px;
-	left: 300px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 25px;
+	text-align: center;
 	cursor: pointer;
+	margin-right: 30px;
 }
 
 .hd1-bean{
-	position: absolute;
-	top: 780px;
-	left: 350px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 25px;
+	text-align: center;
 	cursor: pointer;
+	margin-right: 30px;
 }
 
 .fz-bean{
-	position: absolute;
-	top: 790px;
-	left: 730px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 25px;
+	text-align: center;
 	cursor: pointer;
+	margin-right: 30px;
 }
 
 .yz-bean{
-	position: absolute;
-	top: 900px;
-	left: 1000px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 25px;
+	text-align: center;
 	cursor: pointer;
+	margin-right: 30px;
 }
-
-.hd2-bean{
-	position: absolute;
-	top: 900px;
-	left: 1200px;
-	cursor: pointer;
-}
-
 
 
 
@@ -279,16 +298,310 @@ html,body{
 
 
 .footer{
- width: 100%;
- height: 50px;
- font-family: 'Alegreya', serif;
- font-size: 16px;
- text-align: center;
- background-color: #594a47;
- color: #ffffff;
- display: flex;
+ 	width: 100%;
+	height: 50px;
+ 	font-family: 'Alegreya', serif;
+ 	font-size: 16px;
+ 	text-align: center;
+ 	background-color: #594a47;
+ 	color: #ffffff;
+ 	display: flex;
     align-items: center;
     justify-content: center;
- letter-spacing: 7px;
+ 	letter-spacing: 7px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 768px){
+.nav-bar-left{
+	height: 100px;
+	width: 100px;
+	margin-left: 0px;
+}
+
+.nav-bar-left img{
+	height: 80px;
+	width: 80px;
+
+}
+
+.nav-bar{
+	width: 100%;
+	display: inline-flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+
+}
+
+.nav-bar-right{
+	margin-right: 5px;
+}
+
+.list{
+	width: 100%;
+	list-style: none;
+	display: inline-flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.list-item-link{
+	margin-right: 10px;
+	color: 	#7c6d67;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	font-size: 13px;
+	text-decoration-line: none;
+	letter-spacing: 0px;
+}
+
+.list-item-link:hover{
+	color: #f69f61;
+	text-decoration-line: none;
+}
+
+.title{
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 20px;
+	letter-spacing: 3px;
+}
+
+.line{
+	
+    height: 20px;
+    border-right: solid #f69f61 5px;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.header{
+	width: 100%;
+    display: inline-flex;
+    margin-bottom: 25px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.icon img{
+	width: 10%;
+	cursor: pointer;
+}
+
+.icon{
+	z-index: 10;          
+    position: fixed; 
+    bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+
+.footer{
+ 	width: 100%;
+	height: 25px;
+ 	font-family: 'Alegreya', serif;
+ 	font-size: 16px;
+ 	text-align: center;
+ 	background-color: #594a47;
+ 	color: #ffffff;
+ 	display: flex;
+    align-items: center;
+    justify-content: center;
+ 	letter-spacing: 0px;
+}
+
+
+
+
+
+.btn{
+	width: 100%;
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #f5f4f4;
+    font-size: 16px;
+    letter-spacing: 3px;
+    display: inline-flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.btn-left{
+    background-color: #594a47;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-right: 10px;
+    padding-left: 15px;
+    border: 10px solid #7c6d67;
+    border-radius: 25px;
+    width: 105px;
+    height: 15px;
+    text-align: center;
+    margin-right: 0px;
+}
+
+.btn-right{
+	background-color: #594a47;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-right: 10px;
+    padding-left: 15px;
+    border: 10px solid #7c6d67;
+    border-radius: 25px;
+    width: 105px;
+    height: 15px;
+    text-align: center;
+}
+
+
+
+
+.map-area {
+    margin-bottom: 100px;
+    height: 500px;
+}
+
+.bean-title {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #f69f61;
+    font-size: 13px;
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+.bean {
+    width: 100%;
+    margin-bottom: 50px;
+    display: inline-flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.zm-bean {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+.nm-bean {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+.hd1-bean {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+.fz-bean {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+.yz-bean {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 14px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+
+
+
+
+
+
+.zm {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.nm {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.fz {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.hd {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.yz {
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+
+.area-title {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 18px;
+    letter-spacing: 7px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.area-content {
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 10px;
+    letter-spacing: 3px;
+    text-align: center;
+}
 
 }
