--- a/final/css/style1.css
+++ b/final/css/style1.css
@@ -6,6 +6,14 @@ html,body{
 	margin-left: 0;
 	margin-top: 0;
 	margin-bottom: 0;
+
+
+
+	background-image: url(https://upload.cc/i1/2021/06/02/xe0NBl.png);
+    background-position: top;
+    background-size: 100%;
+    background-attachment: scroll;
+    background-repeat: repeat;
 }
 
 
@@ -84,14 +92,24 @@ html,body{
 }
 
 
-.back img{
+
+
+
+
+
+
+
+.content{
 	width: 100%;
-	z-index: -1;
-	position: absolute;
-	top: 0px;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 30px;
+	letter-spacing: 5px;
+	text-align: center;
+	margin-top: 100px;
+	margin-bottom: 300px;
 }
-
-
 
 
 
@@ -101,18 +119,18 @@ html,body{
 
 .container{
 	display: inline-flex;
-	margin-left: 220px;
-    margin-top: 500px;
-    margin-bottom: 600px
+	width: 100%;
+	justify-content: center;
 }
 
 
 
 .contact {
-	width: 100%;
-	background-color: rgba(242,242,240,0.6);
-	padding-left: 150px;
+    width: 50%;
+    background-color: rgba(242,242,240,0.6);
+    padding-left: 15%;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .contact-title {
@@ -154,28 +172,22 @@ html,body{
 
 
 input[type=submit] {
-  color: white;
-  background-color: rgba(242,242,240,0.05);
-  cursor: pointer;
-  font-family: 'Noto Serif TC', serif;
-  font-size: 25.1px;
-  border: 0px;
+  	color: white;
+  	background-color: rgba(124,109,103,0.4);
+  	cursor: pointer;
+  	font-family: 'Noto Serif TC', serif;
+  	font-size: 25.1px;
+  	font-weight: bolder;
+  	border: 0px;
 }
 
 input[type=submit]:hover {
-	color:#7c6d67;
+	background-color: rgba(255,255,255,0.4);
+	color: #7c6d67;
 }
 
 
 
-.taiwan img{
-	width: 55%;
-	opacity: 0.95;
-}
-
-.taiwan{
-	width: 100%;
-}
 
 
 
@@ -189,8 +201,219 @@ input[type=submit]:hover {
 	background-color: #594a47;
 	color: #ffffff;
 	display: flex;
-    	align-items: center;
-    	justify-content: center;
-    	margin-top: 200px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
 	letter-spacing: 7px;
+}
+
+
+
+.icon img{
+ width: 7%;
+ cursor: pointer;
+}
+
+.icon{
+ z-index: 10;          
+    position: fixed; 
+    bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 768px){
+.nav-bar-left{
+	height: 100px;
+	width: 100px;
+	margin-left: 0px;
+}
+
+.nav-bar-left img{
+	height: 80px;
+	width: 80px;
+
+}
+
+.nav-bar{
+	width: 100%;
+	display: inline-flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+
+}
+
+.nav-bar-right{
+	margin-right: 5px;
+}
+
+.list{
+	width: 100%;
+	list-style: none;
+	display: inline-flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.list-item-link{
+	margin-right: 10px;
+	color: 	#7c6d67;
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	font-size: 13px;
+	text-decoration-line: none;
+	letter-spacing: 0px;
+}
+
+.list-item-link:hover{
+	color: #f69f61;
+	text-decoration-line: none;
+}
+
+.title{
+	font-family: 'Noto Serif TC', serif;
+	font-weight: bolder;
+	color: 	#594a47;
+	font-size: 20px;
+	letter-spacing: 3px;
+}
+
+.line{
+	
+    height: 20px;
+    border-right: solid #f69f61 5px;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.header{
+	width: 100%;
+    display: inline-flex;
+    margin-bottom: 25px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.icon img{
+	width: 10%;
+	cursor: pointer;
+}
+
+.icon{
+	z-index: 10;          
+    position: fixed; 
+    bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+
+.footer{
+ 	width: 100%;
+	height: 25px;
+ 	font-family: 'Alegreya', serif;
+ 	font-size: 16px;
+ 	text-align: center;
+ 	background-color: #594a47;
+ 	color: #ffffff;
+ 	display: flex;
+    align-items: center;
+    justify-content: center;
+ 	letter-spacing: 0px;
+}
+
+
+
+
+
+.content {
+    width: 100%;
+    font-family: 'Noto Serif TC', serif;
+    font-weight: bolder;
+    color: #594a47;
+    font-size: 16px;
+    letter-spacing: 3px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    background-color: rgba(245,245,245,0.6);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+
+
+
+
+.contact {
+    width: 50%;
+    background-color: rgba(242,242,240,0.6);
+    padding-left: 15%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.contact-title {
+    color: #7c6d67;
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 25px;
+    letter-spacing: 3px;
+}
+
+.txt {
+    color: #7c6d67;
+    font-size: 16px;
+    font-weight: bolder;
+    margin-bottom: 5px;
+    letter-spacing: 3px;
+}
+
+.form input {
+    height: 25px;
+    width: 70%;
+    background-color: #ffffff;
+    border: 0px;
+    margin-bottom: 12px;
+}
+
+.text-center {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+}
+
+input[type=submit] {
+    color: white;
+    background-color: rgba(124,109,103,0.4);
+    cursor: pointer;
+    font-family: 'Noto Serif TC', serif;
+    font-size: 16px;
+    font-weight: bolder;
+    border: 0px;
+}
+
+
+
 }
