--- a/final/css/style1.css
+++ b/final/css/style1.css
@@ -9,7 +9,7 @@ html,body{
 
 
 
-	background-image: url(https://upload.cc/i1/2021/06/02/xe0NBl.png);
+	background-image: url(https://upload.cc/i1/2021/06/08/FC9Tiv.png);
     background-position: top;
     background-size: 100%;
     background-attachment: scroll;
